syntax = "proto3";
package story.dkg.v1.types;

import "gogoproto/gogo.proto";
import "story/dkg/v1/types/types.proto";

option go_package = "github.com/piplabs/story/client/x/dkg/types";

service TEE {
  rpc GenerateAndSealKey(GenerateAndSealKeyRequest) returns (GenerateAndSealKeyResponse);
  rpc GenerateDeals(GenerateDealsRequest) returns (GenerateDealsResponse);
  rpc ProcessDeals(ProcessDealRequest) returns (ProcessDealResponse);
  rpc ProcessResponses(ProcessResponsesRequest) returns (ProcessResponsesResponse);
  rpc FinalizeDKG(FinalizeDKGRequest) returns (FinalizeDKGResponse);
  rpc PartialDecryptTDH2(PartialDecryptTDH2Request) returns (PartialDecryptTDH2Response);
}

// GenerateAndSealKeyRequest is sent to TEE client to generate and seal a key
message GenerateAndSealKeyRequest {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  string address = 3 [
    (gogoproto.moretags) = "yaml:\"address\""
  ];
}

// GenerateAndSealKeyResponse is returned from TEE client after key generation
message GenerateAndSealKeyResponse {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  bytes dkg_pub_key = 3 [
    (gogoproto.moretags) = "yaml:\"dkg_pub_key\""
  ];

  bytes comm_pub_key = 4 [
    (gogoproto.moretags) = "yaml:\"comm_pub_key\""
  ];

  bytes raw_quote = 5 [
    (gogoproto.moretags) = "yaml:\"raw_quote\""
  ];
}

// GenerateDealsRequest is sent to TEE client to generate deals
message GenerateDealsRequest {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  bool is_resharing = 3 [
    (gogoproto.moretags) = "yaml:\"is_resharing\""
  ];
}

// GenerateDealsResponse is returned from TEE client with generated deals
message GenerateDealsResponse {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  repeated types.Deal deals = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"deals\""
  ];
}

// ProcessDealRequest is sent to TEE client to process deals
message ProcessDealRequest {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  repeated types.Deal deals = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"deals\""
  ];

  bool is_resharing = 4 [
    (gogoproto.moretags) = "yaml:\"is_resharing\""
  ];
}

// ProcessDealResponse is returned from TEE client after processing deals
message ProcessDealResponse {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  repeated types.Response responses = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"responses\""
  ];
}

message ProcessResponsesRequest {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  repeated types.Response responses = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"responses\""
  ];

  bool is_resharing = 4 [
    (gogoproto.moretags) = "yaml:\"is_resharing\""
  ];
}

message ProcessResponsesResponse {
  repeated Justification justifications = 1 [
    (gogoproto.moretags) = "yaml:\"justifications\""
  ];
}

// FinalizeDKGRequest is sent to TEE client to finalize DKG
message FinalizeDKGRequest {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  bool is_resharing = 3 [
    (gogoproto.moretags) = "yaml:\"is_resharing\""
  ];
}

// FinalizeDKGResponse is returned from TEE client after DKG finalization
message FinalizeDKGResponse {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  bytes participants_root = 3 [
    (gogoproto.moretags) = "yaml:\"participants_root\""
  ];

  bytes global_pub_key = 4 [
    (gogoproto.moretags) = "yaml:\"global_pub_key\""
  ];

  repeated bytes public_coeffs = 5 [
    (gogoproto.moretags) = "yaml:\"public_coeffs\""
  ];

  bytes signature = 6 [
    (gogoproto.moretags) = "yaml:\"signature\""
  ];
}

message PartialDecryptTDH2Request {
  bytes mrenclave = 1 [
    (gogoproto.moretags) = "yaml:\"mrenclave\""
  ];

  uint32 round = 2 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  bytes ciphertext = 3 [
    (gogoproto.moretags) = "yaml:\"ciphertext\""
  ];

  bytes label = 4 [
    (gogoproto.moretags) = "yaml:\"label\""
  ];

  uint32 pid = 5 [
    (gogoproto.moretags) = "yaml:\"pid\""
  ];

  bytes dkg_pub_key = 6 [
    (gogoproto.moretags) = "yaml:\"dkg_pub_key\""
  ];

  string sealed_share_id = 7 [
    (gogoproto.moretags) = "yaml:\"sealed_share_id\""
  ];

  // secp256k1 uncompressed requester pubkey (65 bytes)
  bytes requester_pub_key = 8 [
    (gogoproto.moretags) = "yaml:\"requester_pub_key\""
  ];
}

message PartialDecryptTDH2Response {
  // AES-GCM encrypted TDH2 partial, encrypted to requester pubkey
  bytes encrypted_partial_decryption = 1 [
    (gogoproto.moretags) = "yaml:\"encrypted_partial_decryption\""
  ];

  // Ephemeral secp256k1 pubkey (uncompressed) used for ECDH
  bytes ephemeral_pub_key = 2 [
    (gogoproto.moretags) = "yaml:\"ephemeral_pub_key\""
  ];

  bytes pub_share = 3 [
    (gogoproto.moretags) = "yaml:\"pub_share\""
  ];

  bytes signature = 4 [
    (gogoproto.moretags) = "yaml:\"signature\""
  ];
}


message Justification {
  uint32 index = 1 [
    (gogoproto.moretags) = "yaml:\"index\""
  ];

  VSSJustification vss_justification = 2 [
    (gogoproto.moretags) = "yaml:\"vss_justification\""
  ];
}

message VSSJustification {
  bytes session_id = 1 [
    (gogoproto.moretags) = "yaml:\"session_id\""
  ];

  uint32 index = 2 [
    (gogoproto.moretags) = "yaml:\"index\""
  ];

  PlainDeal plain_deal = 3 [
    (gogoproto.moretags) = "yaml:\"plain_deal\""
  ];

  bytes signature = 4 [
    (gogoproto.moretags) = "yaml:\"signature\""
  ];
}

message PlainDeal {
  bytes session_id = 1 [
    (gogoproto.moretags) = "yaml:\"session_id\""
  ];

  SecShare sec_share = 2 [
    (gogoproto.moretags) = "yaml:\"sec_share\""
  ];

  uint32 threshold = 3 [
    (gogoproto.moretags) = "yaml:\"threshold\""
  ];

  repeated Point commitments = 4 [
    (gogoproto.moretags) = "yaml:\"commitments\""
  ];
}

message SecShare {
  uint32 I = 1 [
    (gogoproto.moretags) = "yaml:\"i\""
  ];

  Scalar V = 2 [
    (gogoproto.moretags) = "yaml:\"v\""
  ];
}
